--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
             <h3>PostgreSQL Configuration Tool
-              <small><sup>alpha</sup></small></h3></a>
+              <small><sup>0.2 beta</sup></small></h3></a>
         </div>
       </div>
     </div>
