ajusting layout to better display data

--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
             <h3>PostgreSQL Configuration Tool
-              <small><sup>0.2 beta</sup></small></h3></a>
+              <small><sup>0.3 beta</sup></small></h3></a>
         </div>
+
+      <ul class="nav navbar-nav navbar-right" id="context-menu">
+        <!-- <li><a href="#pgsql-related">PostgreSQL</a></li> -->
+        <!-- 
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li> -->
+      </ul>
       </div>
     </div>
 
@@ -85,15 +100,16 @@
         </div>
       </div>
 
-      <hr>
 
       <footer>
+              <hr>
+
         <p>Developed by <a href="http://github.com/sebastianwebber">Sebastian Webber</a>. Based on pgtune.</p>
       </footer>
     </div> <!-- /container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/pgconfig.js"></script>
