setting de correct version

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
             <h3>PostgreSQL Configuration Tool
-              <small><sup class="pgconfig_version">0.3 beta</sup></small></h3></a>
+              <small><sup class="pgconfig_version"></sup></small></h3></a>
         </div>
 
       <ul class="nav navbar-nav navbar-right" id="context-menu">
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col-md-12" style="padding-left: 0px;">
           <h1>PostgreSQL Configuration Tool
-              <small><sup class="pgconfig_version">xxxxx</sup></small></h1></a>
+              <small><sup class="pgconfig_version"></sup></small></h1></a>
         </div>
       </div>
       </div>
