adding new version and max_connections and listen_address to usage box

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                         <div class="col-sm-8">
                             <label for="pg_version">Version</label>
                             <select class="form-control" id="pg_version" name="server[pg_version]">
-                                <option value="9.3" selected="selected">9.3.x</option>
+                                <option value="9.3">9.3.x</option>
+                                <option value="9.4" selected="selected">9.4.x</option>
                             </select>
                         </div>
                     </div>
