--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="pgConfig">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body ng-controller="ConfigurationController">
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header"><a href="https://github.com/sebastianwebber/pgconfig"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
@@ -59,7 +59,7 @@
                         <div class="col-sm-12">
                             <label for="total_memory">Total Memory</label>
                             <div class="input-group">
-                              <input class="form-control" id="total_memory" name="server[total_memory]" required="true" size="30" type="text" value="2" />
+                              <input class="form-control" id="total_memory" name="server[total_memory]" required="true" size="30" type="text" ng-model="form.total_ram" ng-init="form.total_ram=2" />
                               <span class="input-group-addon">GB</span>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="col-sm-8">
                             <label for="pg_version">Version</label>
-                            <select class="form-control" id="pg_version" name="server[pg_version]">
+                            <select class="form-control" id="pg_version" name="server[pg_version]" ng-model="form.version" ng-init="form.version=9.4">
                                 <option value="9.3">9.3.x</option>
                                 <option value="9.4" selected="selected">9.4.x</option>
                             </select>
@@ -109,6 +109,42 @@
             <p class="text-center">Input your server details and press generate.</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="page-header">
+            <h3>PostgreSQL Related</h3>
+          </div>
+          <div class="panel panel-default" ng-repeat="categories in pgsql_parameters">
+            <div class="panel-heading">{{ categories.category }}</div>
+            <table class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                  <th class="col-sm-7">Parameter</th>
+                  <th class="col-sm-1" ng-repeat="env in enviroments"> {{ env.name }}</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr ng-repeat="parm in categories.parameterList">
+                  <td>
+                    <a href="{{ parm.doc_url }}">{{ parm.name }}</a>
+                  </td>
+                  <td class="col-sm-1" ng-repeat="env in enviroments">
+                    <span ng-repeat="rule in parm.rules | filter: env.name" title="{{rule.formula}}">{{rule.formula | process_formula : form.total_ram : parm.max_value | bytes }}</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+<!-- 
+  <ul>
+    <li ng-repeat="categories in pgsql_parameters">
+      <p>{{env.category}}</p>
+    </li>
+  </ul> -->
+
 
 
       <footer>
@@ -124,5 +160,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/pgconfig.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
