--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <tbody>
                 <tr ng-repeat="parm in categories.parameterList">
                   <td>
-                    <a href="{{ parm.doc_url }}">{{ parm.name }}</a>
+                    <a href="{{ parm.doc_url | adjust_version : form.version }}">{{ parm.name }}</a>
                   </td>
                   <td class="col-sm-1" ng-repeat="env in enviroments">
                     <span ng-repeat="rule in parm.rules | filter: env.name" title="{{rule.formula}}">{{rule.formula | process_formula : form.total_ram : parm.max_value | bytes }}</span>
