--- a/index.html
+++ b/index.html
@@ -44,11 +44,27 @@
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron hidden-print">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <form action="#" method="post" class="form-horizontal">            
+
+    <div class="container">
+      <div class="visible-print">
+      <div class="row">
+        <div class="col-md-12" style="padding-left: 0px;">
+          <h1>PostgreSQL Configuration Tool
+              <small><sup class="pgconfig_version"></sup></small></h1></a>
+        </div>
+      </div>
+      </div>
+<!--       <div class="row" id="generated_data">
+        <div class="col-md-12">
+            <p class="text-center">Input your server details and press generate.</p>
+        </div>
+      </div> -->
+      <div class="row">
+          <div class="col-md-2">
+          <!-- <div class="page-header"> -->
+            <!-- <h4>Server Details</h4> -->
+          <!-- </div> -->
+            <form action="#" method="post" class="form-horizontal" style="padding-top: 20px">            
                 <fieldset>
                     <legend>Server Details</legend>
                     <div class="form-group">
@@ -63,21 +79,15 @@
                               <span class="input-group-addon">GB</span>
                             </div>
                         </div>
-                        <!-- <div class="col-sm-6">
-                            <label for="db_size">Database size</label>
-                            <div class="input-group">
-                              <input class="form-control" id="db_size" name="server[db_size]" required="true" size="30" type="text" value="10" />
-                              <span class="input-group-addon">GB</span>
-                            </div>
-                            
-                        </div> -->
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <label for="max_connections">Total Connections</label>
                             <input class="form-control" id="max_connections" name="server[max_connections]" required="true" size="30" type="text" value="100" ng-model="form.max_connections" ng-init="form.max_connections=100" />
                         </div>
-                        <div class="col-sm-8">
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12">
                             <label for="pg_version">Version</label>
                             <select class="form-control" id="pg_version" name="server[pg_version]" ng-model="form.version" ng-init="form.version=9.4">
                                 <option value="9.3">9.3.x</option>
@@ -85,32 +95,10 @@
                             </select>
                         </div>
                     </div>
-                    <button type="submit" id="b_generate" class="btn btn-primary btn-lg" onclick="return false;">Generate</button>
                 </fieldset>
             </form>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="visible-print">
-      <div class="row">
-        <div class="col-md-12" style="padding-left: 0px;">
-          <h1>PostgreSQL Configuration Tool
-              <small><sup class="pgconfig_version"></sup></small></h1></a>
-        </div>
-      </div>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row" id="generated_data">
-        <div class="col-md-12">
-            <p class="text-center">Input your server details and press generate.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10">
           <div class="page-header">
             <h3>PostgreSQL Related</h3>
           </div>
