--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <body ng-controller="ConfigurationController">
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header"><a href="https://github.com/sebastianwebber/pgconfig"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+        <div class="navbar-header">
+          <fork-me></fork-me>
           <a class="navbar-brand" href="#">
             <h3>PostgreSQL Configuration Tool
               <small><sup>{{ version }}</sup></small></h3></a>
@@ -52,9 +53,6 @@
       </footer>
     </div>
 
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/pgconfig.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
