--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="col-md-10">
           <pgsql-related></pgsql-related>
           <usage></usage>
+          <pgbadger-usage></pgbadger-usage>
         </div>
       </div>
       <footer>
