adding some nice loading message

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
           </div>
         </div>
       </div>
+      <div class="row" ng-hide="true" style="padding-top: 20px;">
+        <div class="col-md-12">
+        Loading angular stuff...
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-2">
           <server-details></server-details>
