apply some style on loading message

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           </div>
         </div>
       </div>
-      <div class="row" ng-hide="true" style="padding-top: 20px;">
+      <div class="row" ng-hide="true" style="padding-top: 20px;" class="hidden-print">
         <div class="col-md-12">
         Loading angular stuff...
         </div>
       </div>
-      <div class="row">
+      <div class="row" class="hidden-print">
         <div class="col-md-2">
           <server-details></server-details>
         </div>
