--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
       </footer>
     </div>
 
+    <script src="bower_components/numeral/min/numeral.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="bower_components/angular-numeraljs/dist/angular-numeraljs.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
