--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           </div>
         </div>
       </div>
-      <div class="row" ng-hide="true" style="padding-top: 20px;" class="hidden-print">
-        <div class="col-md-12">
+      <div class="row" ng-hide="true" class="hidden-print">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         Loading angular stuff...
         </div>
       </div>
