--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/bootstrap.min.css" media="all" rel="stylesheet">
     <link href="css/pgconfig.css" media="screen" rel="stylesheet">
     <link href="bower_components/angular-loading-bar/build/loading-bar.min.css" media="screen" rel="stylesheet">
+    <link href="bower_components/highlightjs/styles/github.css" media="screen" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -58,6 +59,7 @@
     </div>
 
     <script src="bower_components/numeral/min/numeral.min.js"></script>
+    <script src="bower_components/highlightjs/highlight.pack.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
