nodejs first try

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>PostgreSQL Configuration Tool</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" media="all" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" rel="stylesheet">
     <link href="css/pgconfig.css" media="screen" rel="stylesheet">
     <link href="bower_components/angular-loading-bar/build/loading-bar.min.css" media="screen" rel="stylesheet">
     <link href="bower_components/highlightjs/styles/github.css" media="screen" rel="stylesheet">
