--- a/index.html
+++ b/index.html
@@ -19,16 +19,12 @@
     <div>
         <div ng-controller="MenuController">
             <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
-                <md-tab> <a href="#/about">About</a> </md-tab>
-                <md-tab> <a href="#/tuning">Tuning Advisor</a> </md-tab>
+                <md-tab label="About" ui-sref="#/about"></md-tab>
+                <md-tab label="Tuning Advisor" ui-sref="#/tuning"></md-tab>
             </md-tabs>
             <div id="content" ng-view flex> </div>
         </div>
     </div>
-
-
-
-
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
