getting data from the api

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="/bower_components/angular-material/angular-material.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="app/main.js"></script>
 </body>
 
