adding some title

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.min.css" />
     <link rel="stylesheet" href="pgconfig.css" />
+    <title>PGConfig 2.0</title>
 </head>
 
 <body ng-app="PGConfigUI">
