--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <div>
         <div ng-controller="MenuController">
             <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
-                <md-tab label="About" ui-sref="#/about"></md-tab>
-                <md-tab label="Tuning Advisor" ui-sref="#/tuning"></md-tab>
+                <md-tab label="About" ui-sref="about_url"></md-tab>
+                <md-tab label="Tuning Advisor" ui-sref="tuning_url"></md-tab>
             </md-tabs>
-            <div id="content" ng-view flex> </div>
+            <div id="content" ui-view flex> </div>
         </div>
     </div>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
-    <script src="/bower_components/angular-route/angular-route.min.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="app/main.js"></script>
