--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="/bower_components/angular-static-include/includeStatic.js"></script>
+    <script src="/bower_components/clipboard/dist/clipboard.min.js"></script>
+    <script src="/bower_components/ngclipboard/dist/ngclipboard.min.js"></script>
     <script src="app/main.js"></script>
 </body>
 
