--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 
 <body ng-app="PGConfigUI" layout="column" class="layout layout-column">
-    <div>
-        <md-toolbar class="md-accent">
-            <h2 class="md-toolbar-tools">
-                <span>PostgreSQL Configuration Tool <sup>2.0</sup> </span>
-            </h2>
-        </md-toolbar>
+    <div ng-hide="true">
+        PGConfig: Loading angular stuff...
+    </div>
+    <div ng-cloak>
+        <ng-include src="'/app/partials/app-toolbar.html'"></ng-include>
         <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
             <md-tab label="About" ui-sref="about_url"></md-tab>
             <md-tab label="Tuning Advisor" ui-sref="tuning_url"></md-tab>
