removing MainMenuController reference no longer needed

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
             <md-tab label="About" ui-sref="about_url"></md-tab>
         </md-tabs>
     </div>
-    <md-content flex ng-controller="MainMenuController" layout="column" layout-fill>
+    <md-content flex layout="column" layout-fill>
         <ui-view></ui-view>
     </md-content>
     </div>
@@ -38,7 +38,6 @@
     <script src="/factories/mainFactory.js"></script>
     <script src="/routes/mainRoute.js"></script>
     <script src="/configuration/mainConfig.js"></script>
-    <script src="/controllers/mainMenuController.js"></script>
     <script src="/controllers/mainReaderController.js"></script>
     <script src="/controllers/tuningController.js"></script>
     <script src="/controllers/dialogController.js"></script>
