spliting windows com tuning, updating the todo and forcing user to select the export option

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
     <script src="/controllers/mainReaderController.js"></script>
     <script src="/controllers/tuningController.js"></script>
     <script src="/controllers/dialogController.js"></script>
+    <script src="/controllers/dialogExportController.js"></script>
     <script src="/controllers/tuningToolbarController.js"></script>
     <script src="/controllers/mainController.js"></script>
     <script src="/main.js"></script>
