--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         PGConfig: Loading angular stuff...
     </div>
     <div ng-cloak>
-        <ng-include src="'/partials/app-toolbar.html'"></ng-include>
+        <ng-include src="'/partials/toolbar.html'"></ng-include>
         <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
             <md-tab label="Tuning Advisor" ui-sref="tuning_url"></md-tab>
             <md-tab label="About" ui-sref="about_url"></md-tab>
