--- a/app/index.html
+++ b/app/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <!-- build:css assets/css/style.min.css -->
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.min.css" />
     <link rel="stylesheet" href="/styles/pgconfig.css" />
+    <!-- endbuild -->
+
     <title>PGConfig 2.0</title>
 </head>
 
 <body ng-app="pgconfig" layout="column" class="layout layout-column">
     <div ng-hide="true">
-        PGConfig: Loading angular stuff...
+        Loading angular stuff...
     </div>
     <div ng-cloak>
         <ng-include src="'/partials/toolbar.html'"></ng-include>
@@ -25,16 +28,18 @@
         <ui-view></ui-view>
     </md-content>
     </div>
+    <!-- build:js assets/js/bower.js -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
     <script src="/bower_components/angular-material/angular-material.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="/bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
-    <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
-    <script src="/bower_components/clipboard/dist/clipboard.min.js"></script>
-    <script src="/bower_components/ngclipboard/dist/ngclipboard.min.js"></script>
-    <!-- GRUNTSTART -->
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
+    <script src="/bower_components/clipboard/dist/clipboard.js"></script>
+    <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
+    <!-- endbuild -->
+    <!-- build:js assets/js/app.js -->
     <script src="/factories/mainFactory.js"></script>
     <script src="/routes/mainRoute.js"></script>
     <script src="/configuration/mainConfig.js"></script>
@@ -45,7 +50,7 @@
     <script src="/controllers/tuningToolbarController.js"></script>
     <script src="/controllers/mainController.js"></script>
     <script src="/main.js"></script>
-    <!-- GRUNTEND -->
+    <!-- endbuild -->
 </body>
 
 </html>
