fixing bower and grunt starting at package.json

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <ui-view></ui-view>
     </md-content>
     </div>
-    <!-- build:js assets/js/bower.js -->
+    <!-- build:js assets/js/vendor.min.js -->
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-aria/angular-aria.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.js"></script>
@@ -39,7 +39,7 @@
     <script src="/bower_components/clipboard/dist/clipboard.js"></script>
     <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
     <!-- endbuild -->
-    <!-- build:js assets/js/app.js -->
+    <!-- build:js assets/js/app.min.js -->
     <script src="/factories/mainFactory.js"></script>
     <script src="/routes/mainRoute.js"></script>
     <script src="/configuration/mainConfig.js"></script>
