--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         Loading angular stuff...
     </div>
     <div ng-cloak>
-        <ng-include src="'/partials/toolbar.html'"></ng-include>
+        <ng-include src="'/app/partials/toolbar.html'"></ng-include>
         <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
             <md-tab label="Tuning Advisor" ui-sref="tuning_url"></md-tab>
             <md-tab label="About" ui-sref="about_url"></md-tab>
@@ -40,16 +40,16 @@
     <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
     <!-- endbuild -->
     <!-- build:js assets/js/app.min.js -->
-    <script src="/factories/mainFactory.js"></script>
-    <script src="/routes/mainRoute.js"></script>
-    <script src="/configuration/mainConfig.js"></script>
-    <script src="/controllers/mainReaderController.js"></script>
-    <script src="/controllers/tuningController.js"></script>
-    <script src="/controllers/dialogController.js"></script>
-    <script src="/controllers/dialogExportController.js"></script>
-    <script src="/controllers/tuningToolbarController.js"></script>
-    <script src="/controllers/mainController.js"></script>
-    <script src="/main.js"></script>
+    <script src="/app/factories/mainFactory.js"></script>
+    <script src="/app/routes/mainRoute.js"></script>
+    <script src="/app/configuration/mainConfig.js"></script>
+    <script src="/app/controllers/mainReaderController.js"></script>
+    <script src="/app/controllers/tuningController.js"></script>
+    <script src="/app/controllers/dialogController.js"></script>
+    <script src="/app/controllers/dialogExportController.js"></script>
+    <script src="/app/controllers/tuningToolbarController.js"></script>
+    <script src="/app/controllers/mainController.js"></script>
+    <script src="/app/main.js"></script>
     <!-- endbuild -->
 </body>
 
