--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.min.css"/>
     <!-- build:css assets/css/style.min.css -->
-    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.css" />
     <link rel="stylesheet" href="/styles/pgconfig.css" />
     <!-- endbuild -->
@@ -18,7 +18,7 @@
         Loading angular stuff...
     </div>
     <div ng-cloak>
-        <ng-include src="'/app/partials/toolbar.html'"></ng-include>
+        <ng-include src="'/app/templates/toolbar.html'"></ng-include>
         <md-tabs md-selected="selectedIndex" md-dynamic-height md-border-bottom flex>
             <md-tab label="Tuning Advisor" ui-sref="tuning_url"></md-tab>
             <md-tab label="About" ui-sref="about_url"></md-tab>
@@ -28,15 +28,16 @@
         <ui-view></ui-view>
     </md-content>
     </div>
+
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-animate.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-aria.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angular_material/1.0.7/angular-material.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.9.0/loading-bar.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.6/angular-resource.min.js"></script>
     <!-- build:js assets/js/vendor.min.js -->
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-aria/angular-aria.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js"></script>
-    <script src="/bower_components/angular-material/angular-material.js"></script>
-    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="/bower_components/angular-loading-bar/build/loading-bar.js"></script>
-    <script src="/bower_components/angular-resource/angular-resource.js"></script>
-    <script src="/bower_components/clipboard/dist/clipboard.js"></script>
     <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
     <!-- endbuild -->
     <!-- build:js assets/js/app.min.js -->
