fix generate label, adding grunt watch (for dev purposes), fix styles path, removing templatecache from source (added with grunt )

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.min.css"/>
     <!-- build:css assets/css/style.min.css -->
     <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.css" />
-    <link rel="stylesheet" href="/styles/pgconfig.css" />
+    <link rel="stylesheet" href="/app/styles/pgconfig.css" />
     <!-- endbuild -->
 
     <title>PGConfig 2.0</title>
@@ -43,6 +43,7 @@
     <!-- build:js assets/js/app.min.js -->
     <script src="/app/factories/mainFactory.js"></script>
     <script src="/app/routes/mainRoute.js"></script>
+    <script src="/app/templates/mainTemplate.js"></script>
     <script src="/app/configuration/mainConfig.js"></script>
     <script src="/app/controllers/mainReaderController.js"></script>
     <script src="/app/controllers/tuningController.js"></script>
