adding new directive

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
     <!-- build:js assets/js/app.min.js -->
     <script src="/app/services/tuningToolbarService.js"></script>
     <script src="/app/services/mainService.js"></script>
+    <script src="/app/directives/mainDirective.js"></script>
     <script src="/app/routes/mainRoute.js"></script>
     <script src="/app/templates/mainTemplate.js"></script>
     <script src="/app/configuration/mainConfig.js"></script>
