customizing loading-bar color

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.min.css" />
     <!-- build:css assets/css/style.min.css -->
-    <link rel="stylesheet" href="/bower_components/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="/app/styles/loading-bar.css" />
     <link rel="stylesheet" href="/app/styles/pgconfig.css" />
     <!-- endbuild -->
 
