adding highlight to export page

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc4/angular-material.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
     <!-- build:css assets/css/style.min.css -->
     <link rel="stylesheet" href="/app/styles/loading-bar.css" />
     <link rel="stylesheet" href="/app/styles/pgconfig.css" />
@@ -40,6 +41,9 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-loading-bar/0.9.0/loading-bar.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.8/angular-resource.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-highlightjs/0.6.1/angular-highlightjs.min.js"></script>
+
     <!-- build:js assets/js/vendor.min.js -->
     <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
     <!-- endbuild -->
