adding default google fonts

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0-rc4/angular-material.min.css" />
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/styles/default.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" />
     <!-- build:css assets/css/style.min.css -->
+    <link rel="stylesheet" href="/bower_components/mdDataTable/dist/md-data-table-style.css">
+    <link rel="stylesheet" href="/bower_components/angular-material-icons/angular-material-icons.css">
     <link rel="stylesheet" href="/app/styles/loading-bar.css" />
     <link rel="stylesheet" href="/app/styles/pgconfig.css" />
     <!-- endbuild -->
@@ -46,6 +49,9 @@
 
     <!-- build:js assets/js/vendor.min.js -->
     <script src="/bower_components/ngclipboard/dist/ngclipboard.js"></script>
+    <script src="/bower_components/mdDataTable/dist/md-data-table.js"></script>
+    <script src="/bower_components/mdDataTable/dist/md-data-table-templates.js"></script>
+    <script src="/bower_components/angular-material-icons/angular-material-icons.js"></script>
     <!-- endbuild -->
     <!-- build:js assets/js/app.min.js -->
     <script src="/app/services/tuningToolbarService.js"></script>
