adding details for the parameter

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
     <script src="/app/configuration/mainConfig.js"></script>
     <script src="/app/controllers/mainReaderController.js"></script>
     <script src="/app/controllers/tuningController.js"></script>
+    <script src="/app/controllers/parameterDirectiveController.js"></script>
     <script src="/app/controllers/tuningExportController.js"></script>
     <script src="/app/controllers/tuningToolbarController.js"></script>
     <script src="/app/controllers/mainController.js"></script>
