adding missing dialog stuff (wrongly removed)

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
     <script src="/app/templates/mainTemplate.js"></script>
     <script src="/app/configuration/mainConfig.js"></script>
     <script src="/app/controllers/mainReaderController.js"></script>
+    <script src="/app/controllers/dialogController.js"></script>
     <script src="/app/controllers/tuningController.js"></script>
     <script src="/app/controllers/parameterDirectiveController.js"></script>
     <script src="/app/controllers/tuningExportController.js"></script>
